k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nextjs-demo-app
  namespace: nextjs-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nextjs-demo-app

  strategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: nextjs-demo-app

    spec:
      containers:
        - name: nextjs-demo-app
          image: aishwaryadevaraj/nextjs-demo-app:9
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: nextjs-storage
              mountPath: /app/data

      volumes:
        - name: nextjs-storage
          persistentVolumeClaim:
            claimName: nextjs-app-pvc
